@startuml sbags-class

interface Pawn

interface Tile

interface Board {
    +getPawn(tile: Tile): Option[Pawn]
    +setPawn(tile: Tile, pawn: Pawn): Board<Tile, Pawn>
    +removePawn(tile: Tile): Board<Tile, Pawn>
}

interface BoardAction {
    +execute(board: Board): Board
}

class PlacePawn {
    -tile
    -pawn
}

class MovePawn {
    -fromTile
    -toTile
}

class RemovePawn {
    -tile
}

class ActionSequence {
    -actions: Seq[Action]
}

Pawn -- Board
Tile -- Board

BoardAction <|-- MovePawn
BoardAction <|-- RemovePawn
BoardAction <|-- PlacePawn
BoardAction <|-- ActionSequence

BoardAction .left.> Board

@enduml